# titanic_repo

./: .gitignore  Makefile  README.md  dummy_script.py  setup.py  tox.ini
docs/: Makefile  conf.py  index.rst  make.bat
models/: titanic_classification_model.pkl  titanic_classification_model_old.pkl
requirements/: requirements.txt
src/: __init__.py  config.yml  pyproject.toml
src/config/: core.py
src/models/: pipeline.py  train_pipeline.py
src/processing/: data_manager.py  preprocessors.py
tests/: conftest.py  test_features.py  test_prediction.py
titanic_api/: api.log.2023-01-23  api.log.2023-03-28  api.log.2023-04-18  requirements.txt  test-requirements.txt  tox.ini
titanic_api/app/: __init__.py  api.py  config.py  main.py  schemas.py
titanic_api/app/tests/: conftest.py  test_api.py
titanic_api/src/: README.md  config.yml
titanic_api/src/processing/: validation.py
titanic_api/src_old/config/: core.py
titanic_api/src_old/features/: build_features.py
titanic_api/src_old/models/: pipeline.py  predict.py  train_pipeline.py
titanic_api/src_old/processing/: preprocessors.py
