[project]
name = "titanic_survival_ml_project"
version = "0.0.1"
authors = [
  { name="Beray", email="beray@example.com" },
]
description = "A small machine learning example package with titanic dataset"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    'numpy>=1.20.0,<1.21.0',
    'pandas>=1.3.5,<1.4.0',
    'pydantic>=1.8.1,<1.9.0',
    'scikit-learn>=1.0.2,<1.1.0',
    'strictyaml',
    'ruamel.yaml==0.17.10',
    'feature-engine>=1.0.2,<1.1.0',
    'joblib>=1.0.1,<1.1.0'
    ]
[tool.setuptools]
py-modules = [
    "data",
    "config",
    "models",
    "features",
    "processing",
    "visualization"
]
